# rlm

./: .coveragerc  .gitignore  .gitmodules  CLAUDE.md  CONVERGENCE_ANALYSIS.md  FIXES.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART_LLM_QUERY.md  README.md  SESSION_SUMMARY.md  core.html  core.html.md  dataset_memory.html  dataset_memory.html.md  debug_convergence.py  debug_convergence_fixed.py  debug_dopamine.py  debug_tool_behavior.py  eval_reports.html  eval_reports.html.md  index.html  index.html.md  logger.html  logger.html.md  ontology.html  ontology.html.md  procedural_memory.html  procedural_memory.html.md  pyproject.toml  pytest.ini  reasoning_bank.html  reasoning_bank.html.md  rlm_paper.html  rlm_paper.html.md  rlm_paper.ipynb  robots.txt  search.json  settings.ini  shacl_examples.html  shacl_examples.html.md  (+18 more)
dialogs/: inspect_tools.ipynb  swtools.py
docs/: README.md  bgee_examples_extraction_report.md  implementation-complete-summary.md  ontology-affordances.md  ontology-patterns-progressive-disclosure.md  ontology_download_report_2026-01-30.md  progressive-disclosure.md  refactor-to-memory-based-architecture.md  rlm-ontology-solveit-trajectory.md  rlm-solveit-approach.md  shacl-integration-implementation-summary.md  system-recommendations.md  testing-rlm-memory.md
evals/: EXPERIMENTS.md  README.md  __init__.py  ablation_config.py  cli.py  config.yaml  experiment_template.yaml  registry_template.yaml
examples/: compare_tool_surfaces.py  dspy_rlm_quick_experiment.py  dspy_sparql_query_poc.py  memory_integration_demo.py  rlm_memory_demo.py  smoke_test_dspy_rlm.py  smoke_test_dul_systems.py  test_minimal_tools_multi_ontology.py  test_sense_effectiveness.py  test_uniprot_genetic_disease.py
experiments/: README.md
nbs/: 00_core.ipynb  01_ontology.ipynb  01_swtools.ipynb  02_dataset_memory.ipynb  03_logger.ipynb  03_sparql_handles.ipynb  03_test_memory_solveit.ipynb  05_procedural_memory.ipynb  06_reasoning_bank.ipynb  06_shacl_examples.ipynb  07_trajectory_diversity.ipynb  90_eval_reports.ipynb  91_tutorial.ipynb  index.ipynb  nbdev.yml  rlm_paper.ipynb  sidebar.yml
ontology/: ONTOLOGY_SOURCES.md  README.md  core-profile.ttl  core-shapes.ttl  core-vocabulary.ttl  dkf.ttl  download_ontologies.sh  owlrl-shacl.ttl  rdfsplus.rule.ttl  sample.ttl  void_official.ttl
rlm/: _modidx.py  _rlmpaper_compat.py  core.py  dataset.py  logger.py  ontology.py  procedural_memory.py  reasoning_bank.py  shacl_examples.py  sparql_handles.py  swtools.py
rlm_runtime/: __init__.py
scripts/: generate_agent_guide.py  load_exemplars.py  run_meta_analysis.py  seed_memory_heuristics.py
tests/: FINAL_VAR_FIX_SUMMARY.md  README.md  TEST_RESULTS.md  TEST_RESULTS_FULL.md  conftest.py  debug_progressive_disclosure.py  test_build_sense.py  test_comprehensive_final.py  test_curriculum_retrieval.py  test_dataset_integration.py  test_diversity_correctness.py  test_diversity_metrics.py  test_dspy_rlm_cot_integration.py  test_eval_harness.py  test_exemplar_loader.py  test_final_var_as_function.py  test_final_var_executable.py  test_harness_manual.sh  test_interpreter_scratchpad.py  test_interpreter_verification.py  test_llm_query_final_var.py  test_namespace_final_var.py  test_namespace_persistence.py  test_ontology_rlm.py  test_progressive_disclosure_minimal.py  test_quick_e2e.py  test_rlm_ontology_integration.py  (+5 more)
(+722 files in other folders)
