[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "rlm"
dynamic = ["version"]
description = "Recursive Language Models for ontology-based query construction with progressive disclosure"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [{name = "CharlesVardeman", email = "charles.vardeman@gmail.com"}]
keywords = ['nbdev', 'jupyter', 'notebook', 'python', 'rdf', 'sparql', 'ontology', 'llm', 'recursive-language-model']
classifiers = ["Natural Language :: English", "Intended Audience :: Developers", "Development Status :: 3 - Alpha", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3 :: Only"]
dependencies = ['fastcore', 'claudette', 'dialoghelper', 'mistletoe', 'rdflib', 'sparqlx', 'rank-bm25', 'dspy-ai']

[project.optional-dependencies]
# Trajectory diversity metrics for MaTTS evaluation
diversity = [
    'vendi-score>=0.2.0',
    'sentence-transformers>=2.2',
    'matplotlib>=3.5.0',
    'seaborn>=0.12.0',
]
# MLflow experiment tracking
mlflow = ['mlflow>=2.17.0']
# All optional dependencies
all = [
    'vendi-score>=0.2.0',
    'sentence-transformers>=2.2',
    'matplotlib>=3.5.0',
    'seaborn>=0.12.0',
    'mlflow>=2.17.0',
]

[project.urls]
Repository = "https://github.com/LA3D/rlm"
Documentation = "https://LA3D.github.io/rlm"

[project.entry-points.nbdev]
rlm = "rlm._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "rlm.__version__"}

[tool.setuptools.packages.find]
include = ["rlm"]

[tool.nbdev]
doc_path = "_docs"
lib_path = "rlm"
nbs_path = "nbs"
recursive = true
tst_flags = "notest"
version = "0.0.1"
min_python = "3.12"
license = "apache2"
black_formatting = false
doc_host = "https://LA3D.github.io"
doc_baseurl = "/rlm"
git_url = "https://github.com/LA3D/rlm"
lib_name = "rlm"
title = "rlm"
branch = "main"
custom_sidebar = false
user = "LA3D"
author = "CharlesVardeman"
author_email = "charles.vardeman@gmail.com"
copyright = "2026 onwards, CharlesVardeman"
status = "3"
audience = "Developers"
language = "English"
